--- a/hw12_13_14_15_calendar/configs/config.toml
+++ b/hw12_13_14_15_calendar/configs/config.toml
@@ -1,5 +1,9 @@
 [logger]
 level = "INFO"
-
-# TODO
-# ...
+path = "stdout"
+[storage]
+remote = true
+host = "localhost"
+port = "5432"
+db = "postgres"
+ssl = "disable"
