--- a/hw12_13_14_15_calendar/Makefile
+++ b/hw12_13_14_15_calendar/Makefile
@@ -7,6 +7,9 @@ LDFLAGS := -X main.release="develop" -X main.buildDate=$(shell date -u +%Y-%m-%d
 build:
 	go build -v -o $(BIN) -ldflags "$(LDFLAGS)" ./cmd/calendar
 
+start_db:
+	docker-compose -f deployments/docker-compose.yaml up
+
 run: build
 	$(BIN) --config ./configs/config.json
 
@@ -23,7 +26,7 @@ version: build
 	$(BIN) version
 
 test:
-	go test -race ./internal/storage/sql/ ./internal/storage/memory/
+	go test -race ./internal/storage/sql/ ./internal/storage/memory/ ./internal/server/http/
 
 install-lint-deps:
 	(which golangci-lint > /dev/null) || curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(shell go env GOPATH)/bin v1.37.0
