--- a/hw12_13_14_15_calendar/Makefile
+++ b/hw12_13_14_15_calendar/Makefile
@@ -29,7 +29,7 @@ version: build
 	$(BIN) version
 
 test:
-	go test -race ./internal/storage/sql/ ./internal/storage/memory/ ./internal/server/http/
+	go test -race ./internal/storage/sql/ ./internal/storage/memory/ ./internal/server/http/ ./internal/server/grpc/
 
 install-lint-deps:
 	(which golangci-lint > /dev/null) || curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(shell go env GOPATH)/bin v1.37.0
