--- a/hw12_13_14_15_calendar/configs/scheduler_config.json
+++ b/hw12_13_14_15_calendar/configs/scheduler_config.json
@@ -4,7 +4,7 @@
   },
   "storage": {
     "remote": true,
-    "host": "localhost",
+    "host": "127.0.0.1",
     "port": 5432,
     "database": "postgres",
     "ssl": "disable"
