--- a/hw12_13_14_15_calendar/Makefile
+++ b/hw12_13_14_15_calendar/Makefile
@@ -48,7 +48,7 @@ down:
 version: build_calendar
 	$(BIN) version
 
-test:
+test: generate
 	go test -race -count=50 ./internal/server/grpc ./internal/server/http ./internal/storage/memory ./internal/storage/sql
 
 integration-tests: up
@@ -56,7 +56,7 @@ integration-tests: up
 	docker-compose -f deployments/docker-compose.yml down
 
 install-lint-deps:
-	(which golangci-lint > /dev/null) || curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(shell go env GOPATH)/bin v1.37.0
+	(which golangci-lint > /dev/null) || curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(shell go env GOPATH)/bin
 
 lint: install-lint-deps
 	golangci-lint run ./...
